--- a/.golangci.yml
+++ b/.golangci.yml
@@ -45,10 +45,6 @@ run:
     - test_iguazio
     - test_broken
 
-  skip-dirs:
-    - docs
-    - vendor
-
 linters-settings:
   revive:
     rules:
@@ -59,7 +55,8 @@ linters-settings:
 
   gocritic:
     disabled-checks:
-      - commentFormatting # we dont want to enforce space before the comment text
+      # we don't want to enforce space before the comment text
+      - commentFormatting
 
   gci:
     sections:
@@ -77,6 +74,10 @@ issues:
   exclude:
     - "comment on"
     - "error should be the last"
+
+  exclude-dirs:
+    - docs
+    - vendor
 
   exclude-rules:
 
