--- a/.github/workflows/periodic.yaml
+++ b/.github/workflows/periodic.yaml
@@ -24,9 +24,7 @@ env:
 jobs:
   periodic:
     name: Periodic Regression
-    # TODO: update this to ubuntu-latest when the runner issue is fixed:
-    # https://github.com/actions/runner-images/discussions/7188
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
 
     strategy:
       fail-fast: false
